--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -4,10 +4,14 @@
   align-items: center;
   height: 70px;
   padding: 0 30px;
-  background-color: #003b95;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   font-family: Arial, sans-serif;
   font-size: 16px;
+}
+
+.booking-background {
+  background-color: #003b95;
+  padding: 6px;
 }
 
 .navbar-left a {
@@ -37,11 +41,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 36px;
-  height: 36px;
+  width: 23px;
+  height: 23px;
   margin-right: 10px;
   border-radius: 50%;
-  background-color: #f2f2f2;
+  background-image: url('../images/usa.png');
+  background-size: cover;
+  background-position: center;
+  padding-right: 25px;
 }
 
 .circle img {
@@ -64,7 +71,7 @@
   margin-right: 10px;
   padding: 10px 20px;
   border: none;
-  border-radius: 4px;
+  border-radius: 3px;
   background-color: #fff;
   color: #0088cc;
   font-size: 20px;
@@ -89,20 +96,24 @@
 }
 
 .rounded-button {
-  background-color: transparent;
+  background-color: #1a4fa0;
   color: #fff;
   border: 2px solid transparent;
-  border-radius: 20px;
+  border-radius: 40px;
   font-size: 1em;
   margin-right: 10px;
   padding: 10px 20px;
-}
-
-.rounded-button:first-of-type {
+  height: 90%;
   border-color: #fff;
 }
 
-.text-wrapper {
-  text-align: left;
+.rounded-button-no-border {
+  background-color: transparent;
+  color: #fff;
+  border: 2px solid transparent;
+  border-radius: 40px;
+  font-size: 1em;
+  margin-right: 10px;
+  padding: 10px 20px;
+  height: 90%;
 }
-
