--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -3,15 +3,15 @@
   justify-content: space-between;
   align-items: center;
   height: 70px;
-  padding: 0 30px;
+  padding: 0 0px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   font-family: Arial, sans-serif;
   font-size: 16px;
 }
 
 .booking-background {
-  background-color: #003b95;
-  padding: 6px;
+  background-color: #003580;
+  padding-bottom: 6px;
 }
 
 .navbar-left a {
@@ -28,7 +28,6 @@
 
 .navbar-right span {
   font-size: 16px;
-  margin-right: 10px;
   color: #0088cc;
 }
 
@@ -71,11 +70,9 @@
   margin-right: 10px;
   padding: 10px 20px;
   border: none;
-  border-radius: 3px;
+  border-radius: 1px;
   background-color: #fff;
   color: #0088cc;
-  font-size: 20px;
-  font-weight: bold;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
@@ -86,7 +83,7 @@
 }
 
 .buttons {
-  background-color: #003b95;
+  background-color: #003580;
 }
 
 .button-container {
@@ -101,7 +98,6 @@
   border: 2px solid transparent;
   border-radius: 40px;
   font-size: 1em;
-  margin-right: 10px;
   padding: 10px 20px;
   height: 90%;
   border-color: #fff;
@@ -112,8 +108,7 @@
   color: #fff;
   border: 2px solid transparent;
   border-radius: 40px;
+  padding-top: 10px;
   font-size: 1em;
-  margin-right: 10px;
-  padding: 10px 20px;
   height: 90%;
 }
