--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -9,8 +9,13 @@
   font-size: 16px;
 }
 
-.booking-background {
+.navbar-guest {
   background-color: #1ABC9C;
+  padding-bottom: 10px;
+}
+
+.navbar-host {
+  background-color: #db4437;
   padding-bottom: 10px;
 }
 
@@ -29,6 +34,7 @@
 .navbar-right span {
   font-size: 16px;
   color: #0088cc;
+  padding-right: 25px;
 }
 
 .navbar-right span,
